[package]
name = "limeapi"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
mockall = "0.13.1"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
bytes = "1.9.0"
chrono = "0.4.39"
hex = "0.4.3"
hmac = "0.12.1"
# jwt = "0.16.0"
jsonwebtoken = "9.3.0"
thiserror = "2.0.11"
http = "1.2.0"
hyper = "1.5.2"
hyper-util = "0.1.10"
log = "0.4.25"
mockito = "1.6.1"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
rlp = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.137"
serde_urlencoded = "0.7.1"
serial_test = "3.2.0"
sha2 = "0.10.8"
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7.12"
tower = "0.5.2"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
